# MCEq

./: .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CUDA_SOLVER_FIXES.md  LICENSE  README.md  README.rst  azure-pipelines.yml  codecov.yml  conda_req.txt  conftest.py  environment-dev.yml  launch_for_profiling.bat  mceq_config.py  mceq_init.py  profile_mceq_cuda.py  pyproject.toml  requirements.txt  requrements.txt  setup.cfg.bak  setup.py  simple_cupy_script.py
.ci/: LICENSE.txt  azure-manylinux-wheels.yml  azure-publish-dist.yml  azure-setup.yml  azure-steps.yml  azure-tests.yml  build-wheels.sh  macos-install-python.sh  requirements-build.txt  requirements-test.txt
.claude/plans/: geomagnetic-cutoff-implementation.md
.github/: dependabot.yml
.github/workflows/: build_wheels.yml  changelog.yaml  python_build_test_publish.yml  test.yaml  test.yml  test_PR.yaml
CRFluxModels/: CRFluxModels.py  README.rst
CRFluxModels/docs/: Makefile  conf.py  index.rst
MCEq/: __init__.py  charm_models.py  core.py  data.py  data_utils.py  ddm.py  ddm_utils.py  density_profiles.py  energy_solvers.py  geometry.py  info.py  kernels.py  misc.py  msis_wrapper.py  particlemanager.py  solvers.py  time_solvers.py
MCEq/data/: README.md
MCEq/geometry/: ECMWF_Download.py  akbk.csv  density_profiles.py  geometry.py  nrlmsise00_mceq.py
MCEq/spacc/: spacc.c  test_accelerate.ipynb
MCEq/tests/: fixme_test_mceq.py  test_ddm.py  test_densities.py  test_mceq.py  test_msis.py
ParticleDataTool/: .gitignore  ParticleData.xml  ParticleDataTool.py  README.rst
ParticleDataTool/docs/: Makefile  conf.py  index.rst
Python-NRLMSISE-00/: .gitignore  nrlmsise_00.py  nrlmsise_00_data.py  nrlmsise_00_header.py  nrlmsise_00_test.py
Xeon_Phi/: Makefile  kernel_phi.c
c-NRLMSISE-00/: DOCUMENTATION  README  c_msis_interface.py  makefile  msis_test.py  nrlmsise-00.c  nrlmsise-00_test.c
changes/: +accelerate.feat.md  +atmo.chore.md  +autoeig.bugfix.md  +ddm.feat.md  +energy.feat.md  +fallback.feat.md  +geberic.feat.md  +h_obs.feat.md  +kernel.feat.md  +medium.feat.md  +mix.feat.md  +mixing.bugfix.md  +radloss.feat.md  +remove-euler-resonance.api.md  +revert-prod-cross-section-rename.api.md  +warning.bugfix.md  100.bugfix.md  106.bugfix.md  109.chore.md  127.bugfix.md  128.feat.md  132.bugfix.md  133.chore.md  134.docs.md  135.bugfix.md  136.chore.md  137.chore.md  138.bugfix.md  138.chore.md  145.feat.md  147.chore.md  150.bugfix.md  156.bugfix.md  159.api.md  160.docs.md  160.feat  162.bugfix.md  163.bugfix.md  164.bugfix.md  166.feat.md  (+13 more)
data/: DPMJETIII20171_yields.bz2.REMOVED.git-id  DPMJETIII_yields.bz2.REMOVED.git-id  EPOSLHC_yields.bz2.REMOVED.git-id  QGSJET01_yields.bz2  QGSJET01c_yields.bz2  QGSJET01c_yields.ppd  QGSJETII03_yields.bz2  QGSJETII03_yields.ppd  QGSJETII04_yields.bz2  QGSJETII04_yields.ppd  SIBYLL21_yields.bz2.REMOVED.git-id  SIBYLL21_yields.ppd  SIBYLL21_yields.ppd.REMOVED.git-id  SIBYLL23C_PQCD_yields.bz2.REMOVED.git-id  SIBYLL23C_yields.bz2.REMOVED.git-id  SIBYLL23_PP_yields.bz2.REMOVED.git-id  SIBYLL23_pp_yields.bz2.REMOVED.git-id  SIBYLL23_yields.bz2.REMOVED.git-id  SIBYLL23_yields.ppd  compact_decay_tables.bz2  crosssections.bz2  crosssections.ppd  cs_dict.bz2  dEdX_mu_air.ppl  dEdX_mu_air_edges.ppl  decay_dict.bz2  decay_tables.bz2.REMOVED.git-id  decays_v1.bz2.REMOVED.git-id  decays_v1.ppd  decays_v1.ppd.REMOVED.git-id  decays_v1_compact.bz2  pion_decay.eps  sibyll23c_aux.ppd  yield_dict.bz2.REMOVED.git-id
docs/: Makefile  advanced.rst  citations.rst  citeus.rst  conf.py  core.rst  densities.rst  etd1_solver.md  example-gallery.rst  index.rst  intro.rst  mceq_v1.x_v2_diff.md  modules.rst  physics.rst  requirements.txt  todo.md  tutorial.rst  v12v11_diff.rst  v14v13_diff.rst
docs/api/: MCEq.charm_models.CharmModel.rst  MCEq.charm_models.MRS_charm.rst  MCEq.charm_models.WHR_charm.rst  MCEq.config.A_target.rst  MCEq.config.FileIntegrityCheck.rst  MCEq.config.MCEqConfigCompatibility.rst  MCEq.config.adv_set.rst  MCEq.config.assume_nucleon_interactions_for_exotics.rst  MCEq.config.average_loss_operator.rst  MCEq.config.base_path.rst  MCEq.config.base_url.rst  MCEq.config.config.rst  MCEq.config.cuda_fp_precision.rst  MCEq.config.cuda_gpu_id.rst  MCEq.config.dXmax.rst  MCEq.config.data_dir.rst  MCEq.config.debug_level.rst  MCEq.config.dedx_material.rst  MCEq.config.density_model.rst  MCEq.config.e_max.rst  MCEq.config.e_min.rst  MCEq.config.em_db_fname.rst  MCEq.config.enable_em.rst  (+95 more)
docs/api-reference/: charm_models.rst  config.rst  core.rst  data.rst  index.rst  misc.rst  particlemanager.rst  solvers.rst
examples/: Angular_shower_development.ipynb  Basic_flux.ipynb  Basic_flux_v2.ipynb  Compare_primary_fluxes.ipynb  DDM.ipynb  DDM_example.ipynb  DDM_vs_daemonflux.ipynb  Dependence_of_spectrum_on_atmosphere.ipynb  ERA5_density_spline.ipynb  ISVHECRI_details.ipynb  ISVHECRI_numu_vs_calculations.ipynb  KPi_demonstration.ipynb  Muon spectra.ipynb  Partial_hadron_contribution.ipynb  PlotPrototyper.ipynb  Plot_density_depth_relations.ipynb  Simple_zenith_averaged_neutrinos.ipynb  Zenith_distribution_IceCube-Copy1.ipynb  Zenith_distribution_IceCube.ipynb  basic_flux.ipynb  compare_with_sk.ipynb  contribution_from_individual_hadrons.ipynb  partial_hadron_contribution.ipynb  plot_atm_density_depth.ipynb  plot_atmosphere_dependence.ipynb  plot_atmospheres.ipynb  primary_flux.ipynb  prototype_xfselector.ipynb  zenith_averaged.ipynb
mceq_config/: __init__.py
prototyping/: PlotPrototyper.ipynb  prototype_xfselector.ipynb
src/: mceq_config.py
tests/: conftest.py  fixme_test_mceq.py  fixme_test_particlemanager.py  msis_expected.txt  msis_test.py  test_2d_baseline.py  test_2d_baseline_validation.py  test_2d_matrices.py  test_2d_muon_scattering.py  test_charm_models.py  test_config.py  test_core.py  test_data_2d_detection.py  test_ddm.py  test_densities.py  test_exit.py  test_geometry.py  test_hankel.py  test_mceq.py  test_msis.py  test_solv_etd2_2d.py  test_solvers.py  test_solvers_2d.py  test_standard.py
(+63 files in other folders)
