[build-system]
requires = ["scikit-build-core"]
build-backend = "scikit_build_core.build"

[project]
name = "MCEq"
version = "1.7.0"
description = "Numerical cascade equation solver"
readme = "README.md"
authors = [{ name = "Anatoli Fedynitch", email = "afedynitch@gmail.com" }]
license = { text = "BSD 3-Clause License" }
# homepage = "https://github.com/afedynitch/MCEq"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Physics",
    "Intended Audience :: Science/Research",
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: BSD License",
]

dependencies = [

    "h5py",
    "particletools",
    "crflux>1.0.5",
    "scipy",
    "numpy",
    "tqdm",
    "requests",
    "jacobi",
]
[project.optional-dependencies]
test = ["pytest"]

[tool.scikit-build]
wheel.packages = [
    "src/MCEq",
    "src/MCEq/geometry",
    "src/MCEq/geometry/corsikaatm",
    "src/MCEq/geometry/nrlmsise00",
    # "srMCEq.geometry.corsikaatm",
    # "MCEq.geometry.nrlmsise00",
]
# wheel.package-dir = { "" = "src" }

[project.urls]
Changelog = "https://mceq.readthedocs.io/en/latest/en/latest/changelog.html"
Documentation = "https://mceq.readthedocs.io/en/latest"
Homepage = "https://github.com/afedynitch/MCEq"
Issues = "https://github.com/afedynitch/MCEq/issues"

# [flake8]
# extend-ignore = E203, E402
# exclude = test_msis.pymax-line-length = 90
